css/services.css
.coaching-section,
.app-section {
  line-height: var(--font-line-height-service);
  color: #333;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.services-main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.coaching-section {
  margin-top: 40px;
}

.coaching-section h1,
.app-section h1 {
  font-size: var(--font-size-service-h1);

  font-weight: 700;
}

.coaching-section h2,
.app-section h2 {
  font-size: var(--font-size-service-h2);
  line-height: var(--font-line-height-service);
  color: #555;
  margin-bottom: 1rem;
}

.services-image {
  margin-bottom: 2rem;
  margin-top: 0.5rem;
  min-width: 300px;
  max-width: 600px;
  width: 100%;
  border-radius: 16px;
  object-fit: contain;
  align-self: center;
}

@media (max-width: 480px) {
  :root {
    --font-line-height-service: 28px;
    --font-size-service-h1: 1.8rem;
    --font-size-service-h2: 1rem;
  }
}
@media (min-width: 481px) and (max-width: 639px) {
  :root {
    --font-line-height-service: 32px;
    --font-size-service-h1: 1.9rem;
    --font-size-service-h2: 1.1rem;
  }
}

@media (min-width: 640px) and (max-width: 767px) {
  :root {
    --font-line-height-service: 32px;
    --font-size-service-h1: 2rem;
    --font-size-service-h2: 1.2rem;
  }
}

@media (min-width: 768px) and (max-width: 1023px) {
  :root {
    --font-line-height-service: 34px;
    --font-size-service-h1: 2.1rem;
    --font-size-service-h2: 1.3rem;
  }
}

@media (min-width: 1024px) {
  :root {
    --font-line-height-service: 36px;
    --font-size-service-h1: 2.2rem;
    --font-size-service-h2: 1.4rem;
  }
  .coaching-section,
  .app-section {
    padding-left: 60px;
    padding-right: 60px;
    display: flex;
    flex-direction: row;
    width: 100%;
  }
  .app-section {
    margin-top: 80px;
  }
  .coaching-text,
  .services-text {
    width: 50%;
    text-align: left;
  }
  .coaching-image-container {
    padding-left: 20px;
    width: 50%;
    display: flex;
    flex-direction: column;
    place-items: center;
  }
  .app-image-container {
    padding-left: 20px;
    width: 50%;
    display: flex;
    flex-direction: column;
    place-items: center;
  }
  .services-main h2 {
    width: 80%;
    margin-left: 0;
    margin-right: auto;
    text-align: left;
  }
}

@media (min-width: 1400px) {
  .coaching-text,
  .services-text {
    width: 60%;
  }
  .coaching-image-container,
  .app-image-container {
    width: 40%;
  }
  .services-main h2 {
    width: 70%;
    margin-left: 0;
    margin-right: auto;
    text-align: left;
  }
}

